<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TableViewSectionTitle"
                android:text="@string/contactDetails" />

            <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                <LinearLayout style="@style/TableViewBaseItem">

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/firstName" />

                    <TextView
                        android:id="@+id/etFullName"
                        style="@style/TableViewItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/lastName" />

                    <TextView
                        android:id="@+id/etLastName"
                        style="@style/TableViewItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/emailAddress" />

                    <TextView
                        android:id="@+id/etemailaddress"
                        style="@style/TableViewItemRowContent"/>

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/phoneNumber" />

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        style="@style/TableTextItemRowContent" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fillEducation_Layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TableViewSectionTitle"
                android:text="@string/education" />

            <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                <LinearLayout style="@style/TableViewBaseItem">

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/academicDicipline" />

                    <EditText
                        android:id="@+id/etMajor"
                        style="@style/TableTextItemRowContent" />
                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/academicDicipline2" />
                    <EditText
                        android:id="@+id/fillEtSecondMajor"
                        style="@style/TableTextItemRowContent" />
                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/remainingSemesters" />

                    <EditText
                        android:id="@+id/etSemesters"
                        style="@style/TableTextItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/academiclnstitution" />

                    <EditText
                        android:id="@+id/etUniversity"
                        style="@style/TableTextItemRowContent" />
                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/graduationStatus" />
                    <EditText
                        android:id="@+id/fillEtGraduationStatus"
                        style="@style/TableTextItemRowContent" />
                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/average" />
                    <EditText
                        android:id="@+id/fillEtAverage"
                        style="@style/TableTextItemRowContent" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fill_occupation_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TableViewSectionTitle"
                android:text="@string/occupation" />

            <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                <LinearLayout style="@style/TableViewBaseItem">

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/experience" />

                    <EditText
                        android:id="@+id/fillEtExperience"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent"  />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/role" />

                    <EditText
                        android:id="@+id/fillEtRole"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent"  />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/company" />
                    <EditText
                        android:id="@+id/fillEtCompany"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent"  />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/volunteering" />

                    <EditText
                        android:id="@+id/fillEtVolunteering"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent"  />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/workHistory" />

                    <EditText
                        android:id="@+id/fillEtWorkHistory"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent"  />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TableViewSectionTitle"
                android:text="@string/info" />

            <android.support.v7.widget.CardView style="@style/TableViewSectionItem">

                <LinearLayout style="@style/TableViewBaseItem">

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/type" />

                    <EditText
                        android:id="@+id/etStatus"
                        style="@style/TableTextItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/gender" />

                    <EditText
                        android:id="@+id/etGender"
                        style="@style/TableTextItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/address" />

                    <EditText
                        android:id="@+id/etAddress"
                        style="@style/TableTextItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/joinedDate" />

                    <EditText
                        android:id="@+id/etJoinedDate"
                        style="@style/TableTextItemRowContent" />

                    <TextView
                        style="@style/TableViewItemRowHeader"
                        android:text="@string/summary" />

                    <EditText
                        android:id="@+id/etSummary"
                        android:lines="5"
                        android:gravity="top"
                        style="@style/TableTextItemRowContent" />


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

