<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TableViewSectionTitle"
                    android:text="@string/contactDetails" />

                <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                    <LinearLayout style="@style/TableViewBaseItem">

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/fullName" />

                        <TextView
                            android:id="@+id/tvFullName"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/emailAddress" />

                        <TextView
                            android:id="@+id/tvemailaddress"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/phoneNumber" />

                        <TextView
                            android:id="@+id/tvPhoneNumber"
                            style="@style/TableViewItemRowContent" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TableViewSectionTitle"
                    android:text="@string/education" />

                <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                    <LinearLayout style="@style/TableViewBaseItem">

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/major" />

                        <TextView
                            android:id="@+id/tvMajor"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/secondMajor" />

                        <TextView
                            android:id="@+id/tvSecondMajor"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/semesters" />

                        <TextView
                            android:id="@+id/tvSemesters"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/university" />

                        <TextView
                            android:id="@+id/tvUniversity"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/graduationStatus" />

                        <TextView
                            android:id="@+id/tvGraduationStatus"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/average" />

                        <TextView
                            android:id="@+id/tvAverage"
                            style="@style/TableViewItemRowContent" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TableViewSectionTitle"
                    android:text="@string/occupation" />

                <android.support.v7.widget.CardView style="@style/TableViewSectionItem">


                    <LinearLayout style="@style/TableViewBaseItem">

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/experience" />

                        <TextView
                            android:id="@+id/tvExperience"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/role" />

                        <TextView
                            android:id="@+id/tvRole"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/company" />

                        <TextView
                            android:id="@+id/tvCompany"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/volunteering" />

                        <TextView
                            android:id="@+id/tvVolunteering"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/workHistory" />

                        <TextView
                            android:id="@+id/tvWorkHistory"
                            style="@style/TableViewItemRowContent" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/TableViewSectionTitle"
                    android:text="@string/info" />

                <android.support.v7.widget.CardView style="@style/TableViewSectionItem">

                    <LinearLayout style="@style/TableViewBaseItem">

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/type" />

                        <TextView
                            android:id="@+id/tvStatus"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/gender" />

                        <TextView
                            android:id="@+id/tvGender"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/tvAddress"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/joinedDate" />

                        <TextView
                            android:id="@+id/tvJoinedDate"
                            style="@style/TableViewItemRowContent" />

                        <TextView
                            style="@style/TableViewItemRowHeader"
                            android:text="@string/summary" />

                        <TextView
                            android:id="@+id/tvSummary"
                            style="@style/TableViewItemRowContent" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>