<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tsofen.mentorim.Meetingdetails"
    android:orientation="vertical">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <TextView
        android:id="@+id/tvWithMentee"
        style="@style/TextViewTitle" />
    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:padding="8dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvMeetingType"
                style="@style/TableViewItemRowContent" />

            <TextView
                android:id="@+id/tvFrom"
                style="@style/TableViewItemRowContent" />

            <TextView
                android:id="@+id/tvTo"
                style="@style/TableViewItemRowContent" />

            <TextView
                android:id="@+id/tvAt"
                style="@style/TableViewItemRowContent" />

            <TextView
                android:id="@+id/tvSubject"
                style="@style/TableViewItemRowContent" />

            <TextView
                android:id="@+id/tvNotes"
                style="@style/TableViewItemRowContent" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/LinearLayoutsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etSummery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_meeting_activity_summary" />

            <EditText
                android:id="@+id/etPrivateSummery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_meeting_activity_private_summary" />

            <Button
                style="?attr/buttonStyle"
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:text="@string/confirm_meeting" />

            <Button
                style="?attr/buttonStyle"
                android:id="@+id/btnDiscard"
                android:layout_width="match_parent"
                android:text="@string/discard_meeting" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linearlayoutfirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?attr/buttonStyle"
                android:id="@+id/btnApprove"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/approve_meeting" />

            <Button
                style="?attr/buttonStyle"
                android:id="@+id/btnDecline"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/decline_meeting" />
        </LinearLayout>

        <Button
            style="?attr/buttonStyle"
            android:text="@string/cancel_meeting"
            android:id="@+id/btnCancel"
            android:layout_width="match_parent" />

    </LinearLayout>

</LinearLayout>
