<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:text="@string/add_meeting"
        android:textColor="@android:color/black"
        style="@style/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"

        android:background="@android:color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="org.tsofen.mentorim.MeetingCreateActivity"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinAssociatedUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:entries="@array/Mentees" />

            <Spinner
                android:id="@+id/spinMeetingType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:entries="@array/Meetings"
                />

            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="150dp">

            </com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker>


            <EditText
                android:textSize="18sp"
                android:id="@+id/editLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/hint_location"
                android:inputType="textPersonName" />



            <EditText
                android:textSize="18sp"
                android:id="@+id/editMeetingSubjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/hint_meeting_subjects"
                android:inputType="textPersonName" />

            <EditText
                android:textSize="18sp"
                android:lines="10"
                android:gravity="top|start"
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:ems="10"
                android:hint="@string/hint_notes"
                android:inputType="textMultiLine" />


        </LinearLayout>
    </ScrollView>
    <Button
        style="?attr/buttonStyle"
        android:id="@+id/btnDone"
        android:text="@string/done"
        android:layout_width="match_parent" />

</LinearLayout>



